@@ -303,7 +303,6 @@ func TestPayloadTransform(t *testing.T) {
 							"name":  "myservice",
 						},
 					},
-					"metric":    common.MapStr{},
 					"processor": common.MapStr{"event": "metric", "name": "metric"},
 				},
 			},
@@ -341,10 +340,8 @@ func TestPayloadTransform(t *testing.T) {
 							"a.tag": "a.tag.value",
 						},
 					},
-					"metric": common.MapStr{
-						"a.counter":  common.MapStr{"value": float64(612), "type": "counter"},
-						"some.gauge": common.MapStr{"value": float64(9.16), "type": "gauge", "unit": unit},
-					},
+					"a":         common.MapStr{"counter": float64(612)},
+					"some":      common.MapStr{"gauge": float64(9.16)},
 					"processor": common.MapStr{"event": "metric", "name": "metric"},
 				},
 			},
