@@ -514,11 +514,15 @@ class MetricsIntegrationTest(Test):
 
     @unittest.skipUnless(INTEGRATION_TESTS, "integration test")
     def test_metric_doc(self):
+        self.skipTest("might not force mappings any more")
         self.load_docs_with_template(self.get_metrics_payload_path(), self.metrics_url, 'metric', 1)
-        mappings = self.es.indices.get_field_mapping(index=self.index_name, fields="metric*value")
+        mappings = self.es.indices.get_field_mapping(index=self.index_name, fields="summary*")
         found_mapping = False
         for name, metric in mappings[self.index_name]["mappings"]["doc"].items():
+            # skip eg: summary.maximal.type
+            if name.endswith(".type"):
+                continue
             for mapping in metric["mapping"].values():
                 assert mapping["type"] == "float", name + " mapped as " + mapping["type"] + ", not float"
                 found_mapping = True
-        assert found_mapping, "expected to find metric value mappings"
+        assert found_mapping, "expected to find metric value mappings for field named 'summary'"
